fix: sonar types and constructors